--- a/style.css
+++ b/style.css
@@ -1,17 +1,49 @@
 /* <style type="text/css"> */
 
-body{
+:root {
+  --clr-white: rgb(255, 255, 255);
+  --clr-black: rgb(0, 0, 0);
+
+  --clr-default: gray;
+  --clr-primary: blue;
+  --clr-danger: red;
+  --clr-success: green;
+  --clr-warning: orange;
+  --clr-red-brick: #900;
+
+  
+  --ff-sans: "Inter", "sans-serif";
+
+  --fs-normal: 1.25rem;
+  --fs-small: .75rem;
+  --fs-large: 1.75rem;
+
+  --fw-bold: bold;
+
+  --shadow: .5rem;
+
+  --rounded: 2rem;
+  
+}
+
+*,
+*::after,
+*::before {
+    box-sizing: border-box;
+}
+
+body {
     margin: 0;
     padding: 0;
     overflow: hidden;
-    height: 140%; 
-    max-height: 140%; 
+    height: 100%; 
+    max-height: 100%; 
     font-family:Fira Sans;
     line-height: 1.5em;
     font-size:110%;
 }
 
-a:link,a:visited, a:focus, ea:active {
+a:link, a:visited, a:focus, ea:active {
     text-decoration: none;
     color: #900;
     /* display: inline-block; */
@@ -30,6 +62,59 @@ a:hover {
     text-decoration: underline;
 }
 
+
+
+.btn {
+    display: inline-flex;
+
+    justify-content: center;
+
+
+    align-items: center;
+
+    min-width: 10ch;
+
+    min-height: 44px;
+
+    padding: .25em .5em;
+
+    margin: .5em;
+
+    font-size: var(--fs-normal);
+
+    font-weight: var(--fw-bold);
+    
+    text-transform: capitalize;
+    text-decoration: none;
+
+    color: var(--clr-red-brick);
+
+    background-color: var(--clr-white);
+
+    border: solid 3px var(--clr-red-brick);
+
+    box-shadow: var(--shadow) var(--shadow) rgba(0,0, 0 ,.5);
+
+    transition: all .2s ease-in-out;
+}
+
+.btn:hover {
+    box-shadow: calc(var(--shadow)/3) calc(var(--shadow)/3) rgba(0,0, 0 ,.5);
+    color: var(--clr-white)!important;
+    background-color: var(--clr-red-brick);
+}
+
+.btn:active {
+    transform: scale(.95);
+}
+
+
+.btn--chosen {
+    color: var(--clr-white)!important;
+    background-color: var(--clr-red-brick);
+}
+
+
 /* #nav{ */
 /*     position: fixed; */
 /*     top: 0; */
@@ -43,7 +128,7 @@ a:hover {
 /* } */
 
 
-main{
+main {
     position: fixed;
     top: 0; 
     left: 0px; /* Set this to the width of the navigation frame */
